# physiofusion

./: .gitignore  PROJECT_CHARTER_v1.2.md  README.md  environment.yml  pyproject.toml
src/physiofusion/: __init__.py  features.py  windowing.py
src/physiofusion/data/: multimodal.py
src/physiofusion/splits/: __init__.py
tests/: test_splits.py  test_splits.py.
tracks/track2_estimation/: baseline_check.py  build_check.py  build_multimodal.py  build_sequences.py  cgm_cohort_summary.csv  confound_check.py  e4_inspect.py  e4_visualize.py  eda.py  fcn_glucose.py  hrv_check.py  hrv_clean_check.py  ibi_inspect.py  loader_check.py  model_compare.py  multimodal_compare.py  multimodal_features_check.py  regressionwinner_grid_search.py  split_check.py  subject_check.py  tcn_glucose.py  tcn_multimodal.py
tracks/track2_estimation/_archive/: hr_feature_check.py  segment_check.py  window_check.py
